mutating/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
